[package]
name = "dtn7esp"
version = "0.17.1" # managed by release.sh
authors = ["Lars Baumgaertner <baumgaertner@cs.tu-darmstadt.de>"]
description = "Rust delay-tolerant-networking daemon and CLI tools based upon bp7 (bundle protocol version 7 draft); fork for ESP"
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["network-programming"]
repository = "https://github.com/LeWimbes/dtn7eps"
keywords = ["peer2peer", "dtn"]
exclude = [".vscode/", ".idea/", ".embuild/", ".travis.yml"]
readme = "README.md"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
getrandom = { git = "https://github.com/esp-rs-compat/getrandom.git" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2.git" }

[dependencies]
bp7 = { version = "0.9.2" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
serde_bytes = "0.11"
rand = "0.8.3"
tokio = { version = "1.10.0", features = ["net", "rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
futures = "0.3.5"
futures-util = "0.3.5"
pretty_env_logger = "0.4.0"
log = "0.4"
socket2 = "0.4.1"
bytes = "1.1.0"
lazy_static = "1.4.0"
anyhow = "1.0.32"
async-trait = "0.1.40"
humantime = "2.0.1"
enum_dispatch = "0.3.7"
derive_more = "0.99.14"
axum = "0.4.2"
http = "0.2.4"
hyper = { version = "0.14.11", features = ["client"] }
bitflags = "1.3.2"
thiserror = "1.0.23"
