[package]
name = "dtn7esp"
version = "0.17.1" # managed by release.sh
authors = ["Lars Baumgaertner <baumgaertner@cs.tu-darmstadt.de>"]
description = "Rust delay-tolerant-networking daemon and CLI tools based upon bp7 (bundle protocol version 7 draft); fork for ESP"
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["network-programming"]
repository = "https://github.com/LeWimbes/dtn7eps"
keywords = ["peer2peer", "dtn"]
exclude = [".vscode/", ".idea/", ".embuild/", ".travis.yml"]
readme = "README.md"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
getrandom = { git = "https://github.com/esp-rs-compat/getrandom.git" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2.git" }
polling = { git = "https://github.com/esp-rs-compat/polling.git" }
smol = { git = "https://github.com/esp-rs-compat/smol.git" }

[features]
native = ["esp-idf-sys/native", "esp-idf-svc/experimental", "embedded-svc/experimental"]

[build-dependencies]
embuild = "0.27"
anyhow = "1.0.52"

[dependencies]
esp-idf-sys = { version = "0.29", features = ["binstart"] }
esp-idf-svc = { version = "0.36", features = ["experimental", "alloc"] }
embedded-svc = { version = "0.16.1", features = ["experimental", "alloc"] }
bp7 = { version = "0.9.2" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
rand = "0.8.3"
smol = "1.2"
futures = "0.3.5"
futures-util = "0.3.5"
pretty_env_logger = "0.4.0"
log = "0.4"
socket2 = "0.4.1"
lazy_static = "1.4.0"
anyhow = "1.0.52"
async-trait = "0.1.40"
humantime = "2.0.1"
enum_dispatch = "0.3.7"
derive_more = "0.99.14"
