[package]
name = "dtn7esp"
version = "0.17.1" # managed by release.sh
authors = ["Lars Baumgaertner <baumgaertner@cs.tu-darmstadt.de>"]
description = "Rust delay-tolerant-networking daemon and CLI tools based upon bp7 (bundle protocol version 7 draft); fork for ESP"
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["network-programming"]
repository = "https://github.com/LeWimbes/dtn7eps"
keywords = ["peer2peer", "dtn"]
exclude = [".vscode/", ".idea/", ".embuild/", ".travis.yml"]
readme = "README.md"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
getrandom = { git = "https://github.com/esp-rs-compat/getrandom.git" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2.git" }
polling = { git = "https://github.com/esp-rs-compat/polling.git" }
smol = { git = "https://github.com/esp-rs-compat/smol.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" } # There is no release for the last hotfix yet

[features]
native = ["esp-idf-sys/native"]

[build-dependencies]
embuild = "0.28.4"
anyhow = "1.0.53"

[dependencies]
esp-idf-sys = { version = "0.30.4", features = ["binstart"] }
esp-idf-svc = { version = "0.36.7", features = ["experimental"] }
embedded-svc = { version = "0.16.5", features = ["experimental"] }
bp7 = { version = "0.9.3" }
serde = { version = "1.0.136", features = ["derive"] }
serde_cbor = "0.11.2"
rand = "0.8.4"
smol = "1.2.5"
futures = "0.3.19"
futures-util = "0.3.19"
pretty_env_logger = "0.4.0"
log = "0.4.14"
socket2 = "0.4.2"
lazy_static = "1.4.0"
anyhow = "1.0.53"
async-trait = "0.1.52"
humantime = "2.1.0"
enum_dispatch = "0.3.7"
derive_more = "0.99.17"
